<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schmas.android.com/apk/res-auto"
    xmlns:app2="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schmas.android.com/tools"
    xmlns:tools2="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools2:context=".MainActivity">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/icecream_heading"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app2:layout_constraintBottom_toBottomOf="parent"
            app2:layout_constraintEnd_toEndOf="parent"
            app2:layout_constraintLeft_toLeftOf="parent"
            app2:layout_constraintRight_toRightOf="parent"
            app2:layout_constraintStart_toStartOf="parent"
            app2:layout_constraintTop_toTopOf="parent"
            app2:layout_constraintVertical_bias="0.08" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            app2:layout_constraintEnd_toEndOf="parent"
            app2:layout_constraintHorizontal_bias="0.5"
            app2:layout_constraintStart_toStartOf="parent"
            app2:layout_constraintTop_toBottomOf="@+id/textView">

            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radioVanilla" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radioChocolate" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radioStrawberry" />
        </RadioGroup>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:onClick="createIcecream"
            android:text="@string/icecreamButton"
            app2:layout_constraintEnd_toEndOf="parent"
            app2:layout_constraintStart_toStartOf="parent"
            app2:layout_constraintTop_toBottomOf="@+id/spinner" />

        <TextView
            android:id="@+id/messageTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app2:layout_constraintBottom_toBottomOf="parent"
            app2:layout_constraintEnd_toEndOf="parent"
            app2:layout_constraintHorizontal_bias="0.5"
            app2:layout_constraintStart_toStartOf="parent"
            app2:layout_constraintTop_toBottomOf="@+id/button" />

        <CheckBox
            android:id="@+id/checkBox4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:text="@string/hotFudgeCheck"
            app2:layout_constraintEnd_toEndOf="parent"
            app2:layout_constraintHorizontal_bias="0.5"
            app2:layout_constraintStart_toEndOf="@+id/checkBox3"
            app2:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <CheckBox
            android:id="@+id/checkBox3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nutsCheck"
            app2:layout_constraintEnd_toStartOf="@+id/checkBox4"
            app2:layout_constraintHorizontal_bias="0.5"
            app2:layout_constraintStart_toEndOf="@+id/checkBox2"
            app2:layout_constraintTop_toTopOf="@+id/checkBox2" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/sprinklesCheck"
            app2:layout_constraintEnd_toStartOf="@+id/checkBox2"
            app2:layout_constraintHorizontal_bias="0.5"
            app2:layout_constraintHorizontal_chainStyle="spread"
            app2:layout_constraintStart_toStartOf="parent"
            app2:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/caramelCheck"
            app2:layout_constraintEnd_toStartOf="@+id/checkBox3"
            app2:layout_constraintHorizontal_bias="0.5"
            app2:layout_constraintStart_toEndOf="@+id/checkBox"
            app2:layout_constraintTop_toTopOf="@+id/checkBox" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:entries="@array/location"
            app2:layout_constraintStart_toStartOf="parent"
            app2:layout_constraintTop_toBottomOf="@+id/checkBox" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/dairySwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:text="@string/dairy_free"
            app2:layout_constraintEnd_toEndOf="parent"
            app2:layout_constraintTop_toBottomOf="@+id/checkBox3" />

        <Button
            android:id="@+id/locationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/locationButton"
            app2:layout_constraintEnd_toEndOf="parent"
            app2:layout_constraintStart_toStartOf="parent"
            app2:layout_constraintTop_toBottomOf="@+id/messageTextView" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="TextView"
            app2:layout_constraintEnd_toEndOf="parent"
            app2:layout_constraintStart_toStartOf="parent"
            app2:layout_constraintTop_toBottomOf="@+id/locationButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>